--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/teriyaki.html">Grilled Teriyaki</a></li>
+        <li><a href="recipes/pineapple.html">Grilled Pineapple Slices</a></li>
+    </ul>
 </body>
 </html>
